[package]
name = "rfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
prettytable = "0.10.0"
crossterm = "0.28.1"
termios = "0.3.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
textwrap = "0.16.1"
termsize = "0.1.9"